feat(home): Progress change as the task downloads in DownloadManageActivity

--- a/home/src/main/res/layout/item_home_download_manage.xml
+++ b/home/src/main/res/layout/item_home_download_manage.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="com.topview.purejoy.common.component.download.task.DownloadTask"/>
@@ -21,7 +22,8 @@
         
         <com.topview.purejoy.common.widget.StatusCircleButton
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            app:progress="@{downloadTask.progress}"/>
         
     </LinearLayout>
 </layout>
