refactor(common|home): Convert adapter data from DownloadTask to DownloadSongInfo in DownloadManageActivity

--- a/home/src/main/res/layout/activity_home_download_manage.xml
+++ b/home/src/main/res/layout/activity_home_download_manage.xml
@@ -29,7 +29,7 @@
             android:layout_height="match_parent"
             app:layoutManager="@{downloadTaskLayoutManager}"
             app:adapter="@{downloadTaskAdapter}"
-            app:downloadTasks="@{downloadManageViewModel.downloadTasksLiveData}"/>
+            app:downloadSongInfos="@{downloadManageViewModel.downloadSongsLiveData}"/>
         
     </LinearLayout>
 </layout>
