--- a/home/src/main/res/layout/activity_home_download_manage.xml
+++ b/home/src/main/res/layout/activity_home_download_manage.xml
@@ -22,11 +22,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".download.DownloadManageActivity"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingStart="@dimen/common_padding_left"
+        android:paddingEnd="@dimen/common_padding_right">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/common_ic_back_arror" 
+                android:layout_alignParentStart="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/home_download_manage_title"
+                android:textSize="18sp"
+                android:textColor="@color/home_black_text_color"/>
+
+        </RelativeLayout>
+        
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
             app:layoutManager="@{downloadTaskLayoutManager}"
             app:adapter="@{downloadTaskAdapter}"
             app:downloadSongInfos="@{downloadManageViewModel.downloadSongsLiveData}"/>
