feat(common): StatusCircleButton parse custom attrs

--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -45,10 +45,11 @@
         <attr name="progress_circle_radius" format="dimension"/>
         <attr name="progress_done_color" format="color"/>
         <attr name="progress_undone_color" format="color"/>
+        <attr name="progress_stroke_width" format="dimension"/>
         <attr name ="status">
             <enum name = "pause" value="1"/>
             <enum name = "start" value="2"/>
         </attr>
-        <attr name="progress" format="integer"/>
+        <attr name="progress" format="float"/>
     </declare-styleable>
 </resources>
