--- a/common/src/main/res/layout/activity_common_download_manage.xml
+++ b/common/src/main/res/layout/activity_common_download_manage.xml
@@ -5,23 +5,23 @@
 
     <data>
         <import type="androidx.recyclerview.widget.LinearLayoutManager"/>
-        <import type="com.topview.purejoy.home.download.adapter.DownloadManageAdapter"/>
-        <import type="com.topview.purejoy.home.download.DownloadManageViewModel"/>
+        <import type="com.topview.purejoy.common.business.download.manage.adapter.DownloadManageAdapter"/>
+        <import type="com.topview.purejoy.common.business.download.manage.DownloadManageViewModel"/>
         <variable
             name="downloadTaskLayoutManager"
             type="LinearLayoutManager" />
         <variable
             name="downloadTaskAdapter"
-            type="DownloadManageAdapter" />
+            type="com.topview.purejoy.common.business.download.manage.adapter.DownloadManageAdapter" />
         <variable
             name="downloadManageViewModel"
-            type="DownloadManageViewModel" />
+            type="com.topview.purejoy.common.business.download.manage.DownloadManageViewModel" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".download.DownloadManageActivity"
+        tools:context="com.topview.purejoy.common.business.download.manage.DownloadManageActivity"
         android:orientation="vertical"
         android:paddingStart="@dimen/common_padding_left"
         android:paddingEnd="@dimen/common_padding_right">
@@ -40,9 +40,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/home_download_manage_title"
+                android:text="@string/common_download_manage_title"
                 android:textSize="18sp"
-                android:textColor="@color/home_black_text_color"/>
+                android:textColor="@color/common_black_text_color"/>
 
         </RelativeLayout>
         
