feat(home): Add button to skip to DownloadManageActivity in mine

--- a/home/src/main/res/layout/fragment_home_mine.xml
+++ b/home/src/main/res/layout/fragment_home_mine.xml
@@ -12,6 +12,9 @@
         <variable
             name="tvLoginTipsClickListener"
             type="OnClickListener" />
+        <variable
+            name="goDownloadManageClickListener"
+            type="OnClickListener" />
     </data>
 
     <LinearLayout
@@ -57,6 +60,25 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="@color/home_mine_divider_color"/>
+        
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="5dp"
+            android:layout_marginTop="25dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/home_mine_go_download_manage"
+                android:gravity="center"
+                android:textSize="18sp"
+                app:onClickListener="@{goDownloadManageClickListener}"/>
+            
+        </androidx.cardview.widget.CardView>
+        
+
         
     </LinearLayout>
 </layout>
