feat(home): Pop the window when the search song item menu is clicked

--- a/home/src/main/res/layout/item_home_search_song.xml
+++ b/home/src/main/res/layout/item_home_search_song.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="com.topview.purejoy.home.entity.Song"/>
+        <import type="android.view.View.OnClickListener"/>
         <variable
             name="searchSong"
             type="Song" />
+        <variable
+            name="menuClickListener"
+            type="OnClickListener" />
     </data>
 
     <LinearLayout
@@ -41,9 +46,10 @@
         </LinearLayout>
         
         <ImageView
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:src="@drawable/home_ic_search_song_menu"/>
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/home_ic_search_song_menu"
+            app:onClickListener="@{menuClickListener}"/>
         
     </LinearLayout>
 </layout>
