--- a/home/src/main/res/layout/fragment_home_search_content_song.xml
+++ b/home/src/main/res/layout/fragment_home_search_content_song.xml
@@ -7,6 +7,7 @@
         <import type="com.topview.purejoy.home.search.content.song.SearchContentSongViewModel"/>
         <import type="com.topview.purejoy.home.search.content.song.adapter.SearchContentSongAdapter"/>
         <import type="androidx.recyclerview.widget.LinearLayoutManager"/>
+        <import type="android.view.View"/>
         <variable
             name="viewModel"
             type="SearchContentSongViewModel" />
@@ -33,5 +34,17 @@
             app:searchSongsByFirstRequest="@{viewModel.searchSongsByFirstRequestLiveData}"
             app:loadMoreSongs="@{viewModel.searchSongsLoadMoreLiveData}"/>
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="@{viewModel.loadingLiveData ? View.VISIBLE : View.GONE}">
+            
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+            
+        </FrameLayout>
+        
     </FrameLayout>
 </layout>
