feat(home): Add bottom padding in last button in mine layout

--- a/home/src/main/res/layout/fragment_home_mine.xml
+++ b/home/src/main/res/layout/fragment_home_mine.xml
@@ -90,7 +90,8 @@
                 android:layout_height="45dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="5dp"
-                android:layout_marginTop="25dp">
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="10dp">
 
                 <TextView
                     android:layout_width="match_parent"
