refactor(musiclibrary): refactor PlayingLrcFragment used LyricView

--- a/musiclibrary/src/main/res/layout/fragment_music_playing_lrc.xml
+++ b/musiclibrary/src/main/res/layout/fragment_music_playing_lrc.xml
@@ -5,14 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.topview.purejoy.musiclibrary.playing.view.widget.LrcView
+    <com.topview.purejoy.common.widget.lyric.LyricView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/music_playing_lrc_view"
-        app:animate_duration="100"
-        app:row_interval="50dp"
-        app:highlight_color="@color/lrc_highlight_color"
-        app:outer_indicator_color="@color/lrc_outer_indicated_color"
-        app:common_color="@color/lrc_common_color"/>
+        app:highlightColor="@color/lrc_highlight_color"
+        app:normalColor="@color/lrc_common_color"
+        app:indicatorColor="@color/lrc_outer_indicated_color" />
 
 </LinearLayout>
